starting with instransitive verbs

--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -256,10 +256,6 @@
 						<p class="fragment">"Palavra"</p>
 
 						<p class="fragment">Em Inglês: "Word"</p>
-
-						<p class="fragment">
-							<strong><code>w</code></strong>
-						</p>
 					</section>
 
 					<section>
@@ -268,12 +264,6 @@
 						<p class="fragment">"Fim"</p>
 
 						<p class="fragment">Em Inglês: "End"</p>
-
-						<p class="fragment">
-							<strong>
-								<code>e</code>
-							</strong>
-						</p>
 					</section>
 
 					<section>
@@ -365,16 +355,6 @@
 					</section>
 
 					<section>
-						<h2>Verbos: Pequena Pausa</h2>
-
-						<p>Para o VIM, os verbos são diretos.</p>
-
-						<p class="fragment">Ou seja, é escolhida uma ação e um objeto a aplicar a ação.</p>
-
-						<p class="fragment"><small>(E ainda entram os artigos...)</small></p>
-					</section>
-
-					<section>
 						<h2>Verbos: Exemplos</h2>
 						<p><code>palavra <span class="cursor">p</span>alavra palavra</code></p>
 
@@ -455,7 +435,6 @@
 						<ul>
 							<li>"Delete" (apagar) (<code>d</code>)</li>
 							<li>"Change" (alterar) (<code>c</code>)</li>
-							<li>"Find" (encontrar) (<code>f</code>)</li>
 						</ul>
 					</section>
 
@@ -522,6 +501,44 @@
 						<p class="fragment">
 							<code>palavra&nbsp;<span class="cursor">&nbsp;</span>palavra</code>
 						</p>
+					</section>
+
+					<section>
+						<h2>Around: Exemplos</h2>
+
+						<p><code>palavra pal<span class="cursor">a</span>vra palavra</code></p>
+
+						<p>
+							<strong><code>diw</code></strong>
+						</p>
+
+						<p class="fragment">
+							<code>palavra&nbsp;<span class="cursor">p</span>alavra</code>
+						</p>
+					</section>
+
+					<section>
+						<h2>Around: Exemplos</h2>
+
+						<p><code>palavra "palavra<span class="cursor">&nbsp;</span>palavra"</code></p>
+
+						<p>
+							<strong><code>da"</code></strong>
+						</p>
+
+						<p class="fragment"><code>palavra<span class="cursor">&nbsp;</span></code></p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Mais verbos:</h2>
+
+						<ul>
+							<li>Inserir -- Insert -- <code>i</code></li>
+							<li>Adicionar -- Append -- <code>a</code></li>
+							<li>Apagar -- Erase -- <code>x</code></li>
+						</ul>
 					</section>
 				</section>
             </div>
