and that is vim

--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -507,7 +507,7 @@
 						<p><code>palavra pal<span class="cursor">a</span>vra palavra</code></p>
 
 						<p>
-							<strong><code>diw</code></strong>
+							<strong><code>daw</code></strong>
 						</p>
 
 						<p class="fragment">
@@ -531,13 +531,66 @@
 				<section>
 					<section>
 						<h2>Mais verbos:</h2>
-
 						<ul>
 							<li>Inserir -- Insert -- <code>i</code></li>
 							<li>Adicionar -- Append -- <code>a</code></li>
 							<li>Apagar -- Erase -- <code>x</code></li>
 						</ul>
+
+						<p class="fragment">Instransitivos!</p>
 					</section>
+
+					<section>
+						<h2>E mais substantivos:</h2>
+
+						<ul>
+							<li>Fim da linha -- <code>$</code></li>
+							<li>Coluna 0 -- <code>0</code></li>
+							<li>Primeiro caracter não-vazio da linha -- <code>_</code></li>
+						</ul>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>Mas...</h2>
+
+						<p>Nem tudo são rosas...</p>
+
+						<p class="fragment">VIM não tem um elemento "linha".</p>
+					</section>
+
+					<section>
+						<h2>Apagando uma linha</h2>
+
+						<p>
+							<strong><code>d</code><span class="fragment">d</span></strong>
+						</p> 
+
+						<p class="fragment"><strong><code>yy</code></strong> também...</p>
+
+						<p class="fragment">
+							<small>
+								(<code><strong>p</strong> é instransitivo também.</code>)
+							</small>
+						</p>
+					</section>
+				</section>
+
+				<section>
+					<h2>Uma dica: Como aprender a usar isso tudo?</h2>
+
+					<ul>
+						<ol class="fragment">Escolha um comando.</ol>
+						<ol class="fragment">Use-o sempre que puder.</ol>
+						<ol class="fragment">Quando achar que já decorou, volte para o ponto 1.</ol>
+					</ul>
+				</section>
+
+				<section data-background='_images/thats-all-folks.jpg'>
+                    <section>
+                        <h1 class="fragment semi-opaque">Perguntas?</h1>
+                    </section>
 				</section>
             </div>
         </div>
