updated makeidx to stop getting the final slide

--- a/django-full.html
+++ b/django-full.html
@@ -48,7 +48,7 @@
     <body>
         <div class="reveal">
             <div class="slides">
-                <section data-backgroun='_images/django-allauth.png'>
+                <section data-background='_images/django-allauth.png' data-header>
 					<p class='semi-opaque'>
 						<h1>Django</h1>
 						<h2>Uma Introdução</h2>
