--- a/fisl2016.html
+++ b/fisl2016.html
@@ -52,7 +52,7 @@ img {
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-background='_images/fisl2016.png'>
+				<section data-background='_images/fisl2016.png' data-header>
 					<section>
 						<h1 class="semi-opaque">FISL 2016</h1>
 					</section>
