--- a/gramatica-vim.html
+++ b/gramatica-vim.html
@@ -60,7 +60,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <section data-background="_images/vim.png">
+                    <section data-background="_images/vim.png" data-header>
                         <h1 class="semi-opaque">A Gramática do VIM</h1>
                     </section>
                 </section>
