--- a/pypoa.html
+++ b/pypoa.html
@@ -47,7 +47,7 @@ section {
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='_images/poa.jpg'>
+				<section data-background='_images/poa.jpg' data-header>
 					<h1>PyPoa 2014</h1>
 					<p>7 de Junho de 2014</p>
 				</section>
