--- a/spa.html
+++ b/spa.html
@@ -60,7 +60,7 @@ div.code {
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='_images/Eau_Rouge_1997.jpg' class='semi-opaque'>
+				<section data-background='_images/Eau_Rouge_1997.jpg' class='semi-opaque' data-header>
 					<h1>SPA</h1>
 
 					<h2>Single Page Applications</h2>
