--- a/unit-in-unittests-2.html
+++ b/unit-in-unittests-2.html
@@ -55,7 +55,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <section data-background="_images/tdd-kentbeck-book.jpg">
+                    <section data-background="_images/tdd-kentbeck-book.jpg" data-header>
                         <h1 class="semi-opaque">"Unit" em "Unit Tests"</h1>
                     </section>
                 </section>
