--- a/ajax-sosp-cors-csrf.html
+++ b/ajax-sosp-cors-csrf.html
@@ -51,7 +51,7 @@
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='_images/ajax-sosp-cors-csrf.png' class='semi-opaque'>
+				<section data-background='_images/ajax-sosp-cors-csrf.png' class='semi-opaque' data-header>
 					<h1>AJAX / SOSP / CORS / CSRF</h1>
 
 					<p class='fragment'><small>
