--- a/django-rest.html
+++ b/django-rest.html
@@ -44,7 +44,7 @@
     <body>
         <div class="reveal">
             <div class="slides">
-                <section data-background='_images/django-rest.png'>
+                <section data-background='_images/django-rest.png' data-header>
                     <h1 class='semi-opaque'>Entendendo Django REST Framework</h1>
                 </section>
 
