--- a/django.html
+++ b/django.html
@@ -44,7 +44,7 @@
     <body>
         <div class="reveal">
             <div class="slides">
-                <section data-background='_images/django-allauth.png'>
+                <section data-background='_images/django-allauth.png' data-header>
                     <h1 class='semi-opaque'>Entendendo Django</h1>
                 </section>
 
