--- a/gitflow.html
+++ b/gitflow.html
@@ -48,7 +48,7 @@
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='_images/git-workflow-gitflow.png'>
+				<section data-background='_images/git-workflow-gitflow.png' data-header>
 					<h1>GIT Flow</h1>
 				</section>
 
