--- a/gitsvn.html
+++ b/gitsvn.html
@@ -47,7 +47,7 @@ h1 {
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='_images/Sketch27014711.png'>
+				<section data-background='_images/Sketch27014711.png' data-header>
 					<h1>GIT + GIT-SVN</h1>
 				</section>
 
