--- a/python23six.html
+++ b/python23six.html
@@ -51,7 +51,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <section data-background="_images/snake-six.jpg">
+                    <section data-background="_images/snake-six.jpg" data-header>
                         <h1 class="semi-opaque">Python 2 + 3 = Six</h1>
                     </section>
                 </section>
