--- a/python36.html
+++ b/python36.html
@@ -55,7 +55,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <section data-background='_images/python.jpg'>
+                    <section data-background='_images/python.jpg' data-header>
                         <div class="semi-opaque">
                             <h1>Python 3.6</h1>
                             <h2>Novidades da versão</h2>
