--- a/rest.html
+++ b/rest.html
@@ -53,9 +53,8 @@ img {
 	<body>
 
 		<div class="reveal">
-			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='_images/Seascapeshd.png' class='semi-opaque'>
+				<section data-background='_images/Seascapeshd.png' class='semi-opaque' data-header>
 					<h1>ReST</h1>
 					<h4>Restructured State Transfer</h4>
 				</section>
