--- a/vim.html
+++ b/vim.html
@@ -55,7 +55,7 @@ img {
 		<div class="reveal">
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-background='_images/vim_dishwash_bar.jpg'>
+				<section data-background='_images/vim_dishwash_bar.jpg' data-header>
 					<section>
 						<h1 class='semi-opaque'>Pensando em VIM</h1>
 					</section>
