--- a/fugindo-com-python.html
+++ b/fugindo-com-python.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Fujindo para as Colinas com Python</title>
+        <title>Fugindo para as Colinas com Python</title>
 
         <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
         <meta name="author" content="Hakim El Hattab">
@@ -61,7 +61,7 @@
             <div class="slides">
                 <section>
                     <section data-background="_images/python.jpg">
-                        <h1 class="semi-opaque">Fujindo para as Colinas Com Python</h1>
+                        <h1 class="semi-opaque">Fugindo para as Colinas Com Python</h1>
                     </section>
                 </section>
 
