even more python

--- a/fugindo-com-python-2.html
+++ b/fugindo-com-python-2.html
@@ -660,6 +660,45 @@ frase.capitalize()
                             <li class="fragment"><code>capitalize</code> também deve ser um método de strings</li>
                         </ul>
                     </section>
+
+                    <section>
+                        <h2><span style="color:crimson">Welcome</span> to Hell</h2>
+
+                        <p>
+                            Lembram que <code>PASSPHRASE</code> tinha
+                            um monte de colchetes no meio?
+                        </p>
+
+                        <p class="fragment">
+                            <code>.format()</code> converte cada um
+                            deles para um dos parâmetros passados.
+                        </p>
+                    </section>
+
+                    <section>
+                        <h2><span style="color:crimson">Welcome</span> to Hell</h2>
+
+                        <pre><code>
+'Bem vindo {}!'.format('Júlio')
+                        </code></pre>
+
+                        <pre><code>
+Bem vindo Júlio!
+                        </code></pre>
+                    </section>
+
+                    <section>
+                        <h2>Welcome to Hell</h2>
+
+                        <pre><code>
+PASSPHRASE = '{}u{}am para as {}o{}i{}as'
+PASSPHRASE.format('f', 'j', 'c', 'l', 'n')
+                        </code></pre>
+
+                        <pre class="fragment"><code>
+'fujam para as colinas'
+                        </code></pre>
+                    </section>
                 </section>
             </div>
         </div>
