Added a few more notes.

--- a/porque-como-opensource.html
+++ b/porque-como-opensource.html
@@ -74,6 +74,27 @@
                             </ul>
                         </div>
                     </section>
+
+                    <section>
+                        <img src="_images/start-a-fight.jpg" alt="Eu faço perguntas em reuniões que eu não sei nada e reunião explode; não é de propósito" class='stretch'/>
+
+						<aside class="notes">
+							Eu sou famoso (ou era) por entrar eu reuniões, fazer uma
+							pergunta e a reunião explodir em discussões (úteis, diga-se
+							de passagem). Mas eu não fazia isso de propósito.
+						</aside>
+                    </section>
+
+					<section>
+						<img src="_images/fast-speaker.jpg" alt="Eu falo rárpido">
+
+						<aside class="notes">
+							Eu também tenho costume de falar rápido.
+							Essa apresentação talvez termine em menos de
+							20 minutos, mas eu deixo mais tempo para as
+							perguntas dessa forma.
+						</aside>
+					</section>
                 </section>
 
                 <section>
@@ -99,6 +120,16 @@
 						<h1>Por Que Participar?</h1>
 
 						<ul>
+							<li class="fragment">
+								Aprender algo novo
+
+								<aside class="notes">
+									O que a maior parte dos professores (principalmente) faz é sugerir 
+									participar de um projeto open source para aprender uma nova
+									linguagem.
+								</aside>
+							</li>
+
 							<li class="fragment">
 								Para retornar à comunidade
 
