--- a/flask-40mins.html
+++ b/flask-40mins.html
@@ -704,6 +704,19 @@ flask run
 					</section>
 				</section>
 
+				<section>
+					<section>
+						<h2>Rodando de verdade</h2>
+						<h3>Dependências de sistema</h3>
+
+						<pre><code>sudo dnf install nginx uwsgi</code></pre>
+
+						<pre><code>sudo yum install nginx uwsgi</code></pre>
+
+						<pre><code>sudo apt-get install nginx uwsgi</code></pre>
+					</section>
+				</section>
+
                 <section data-background='_images/thats-all-folks.jpg'>
                     <section>
                         <h1 class="fragment semi-opaque">Perguntas?</h1>
