add flask in 40 minutes to the index

--- a/flask-40mins.html
+++ b/flask-40mins.html
@@ -64,7 +64,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <section data-background="_images/flask.png"> <!--  data-header -->
+                    <section data-background="_images/flask.png" data-header>
                         <h1 class="semi-opaque">Flask em 40 Minutos ou Menos</h1>
                     </section>
                 </section>
