Oopsies in Flask

--- a/flask-40mins.html
+++ b/flask-40mins.html
@@ -894,7 +894,7 @@ server {
 
     location / {
         uwsgi_read_timeout  3000;
-        uwsgi_pass azionmanager-uwsgi;
+        uwsgi_pass ata-wsgi;
     }
 }</code></pre>
 
