--- a/tdc2017.html
+++ b/tdc2017.html
@@ -116,6 +116,44 @@
 							Apresentou somente map, reduce e filter.
 						</aside>
 					</section>
+
+					<section>
+						<h3>Reactive Streams</h3>
+
+						<aside class="notes">
+							@humbertostreb
+
+							Reactivemanifesto.org
+
+							Akka streams. Alpakka = OCaml para akka
+
+							RxJava (Netflix usa pro circuit breaker)
+
+							Reactor, spring.
+
+							Java 9, com flows.
+
+							“Um palestrante não vir não é uma exceção, é algo
+							esperado de problemas.”
+
+							Reactor: Mono<> asynchronous 0-1, Flux<> sequence
+							of 0-n items.
+						</aside>
+					</section>
+
+					<section>
+						<h3>Programação funcional, reativa e paralela com C# e F#</h3>
+
+						<aside class="notes">
+							Elemar Jr
+
+							RavenDB
+
+							Complexo de Gabriela: “eu nasci assim, eu vou ser sempre assim…”
+
+							Imutabilidade: remover os set(), alteração criava novo objeto.
+						</aside>
+					</section>
                 </section>
 
                 <section data-background='_images/thats-all-folks.jpg'>
