--- a/tdc2017.html
+++ b/tdc2017.html
@@ -64,7 +64,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-					<section data-background="_images/flask.png"> <!--  data-header -->
+					<section data-background="_images/flask.png">
                         <h1 class="semi-opaque">Resumo TDC 2017</h1>
                     </section>
                 </section>
