added information about firing windows

--- a/mr-banks.html
+++ b/mr-banks.html
@@ -295,6 +295,8 @@ if __name__ == "__main__":
 						<h2>Flink</h2>
 
 						<img src="_images/unclephil-step4.png" alt=""/>
+
+						<img class="fragment" src="_images/unclephil-out.gif" alt="" style="float:right" width="240px"/>
 					</section>
 
 					<section data-transition="fade">
@@ -313,6 +315,12 @@ if __name__ == "__main__":
 						<h2>Flink</h2>
 
 						<img src="_images/unclephil-step7.png" alt=""/>
+
+						<p class="fragment" style="float:right">
+							<img src="_images/unclephil-out.gif" width="240px" alt=""/>
+							<br/>
+							<img src="_images/unclephil-out.gif" width="240px" alt=""/>
+						</p>
 					</section>
 
 					<section data-transition="fade">
