added a preamble about the event

--- a/flinkforward2018.html
+++ b/flinkforward2018.html
@@ -77,6 +77,27 @@
                 </section>
 
 				<section>
+					<section>
+						<h2>About Flink Forward 2018</h2>
+
+						<ul>
+							<li>09-10 Abril 2018</li>
+							<li>Organized by dataArtisans</li>
+						</ul>
+					</section>
+
+					<section>
+						<img src="_images/ff_map.png" alt=""/>
+
+						<p>
+							THE VILLAGE<br/>
+							969 Market Street<br/>
+							San Francisco, CA
+						</p>
+					</section>
+				</section>
+
+				<section>
 					<section data-background="_images/ff_dayone.jpg">
 					</section>
 
