added a mix in the sphinx presentation

--- a/sphinx.html
+++ b/sphinx.html
@@ -415,6 +415,11 @@ sys.path.insert(0, os.path.abspath('../../src'))</code></pre>
 .. .. autofunction:: source.awesome
 .. .. autofunction:: source.cool
 
+Ok, now you'll see **THE SOURCE**! It's the most freaking *awesome* source in
+the whole planet! 
+
+Try no to piss in your pants.
+
 .. automodule:: source
    :members:</code></pre>
 						</p>
