--- a/sphinx.html
+++ b/sphinx.html
@@ -69,7 +69,7 @@
         <div class="reveal">
             <div class="slides">
                 <section>
-                    <section data-background="_images/sphinx_logo.jpg" data-tile>
+                    <section data-background="_images/sphinx_logo.jpg" data-header>
 						<h1 class="semi-opaque">
 							Documentando Projetos Python com Sphinx
 						</h1>
