--- a/cleancodemeetup.html
+++ b/cleancodemeetup.html
@@ -173,6 +173,21 @@ def check(password):
                     </section>
                 </section>
 
+				<section>
+					<section>
+						<h2>Regras</h2>
+					</section>
+
+					<section>
+						<img src="_images/cleancode_dontbeadick.jpg" alt=""/>
+					</section>
+
+					<section>
+						<p>one man's rubbish may be another's treasure</p>
+						<p>Hector Urquhart</p>
+					</section>
+				</section>
+
                 <section data-background='_images/thats-all-folks.jpg'>
                     <section>
                         <h1 class="fragment semi-opaque">Perguntas?</h1>
